--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,37 +6,26 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇨🇱_CL_智利
+    type: ss
+    server: 190.120.230.9
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id002
+    name: 🇵🇦_PA_巴拿马
+    type: ss
+    server: 138.186.142.4
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id003
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 96.30.197.59
-    port: 56272
+    server: a3.bcbot.in
+    port: 8880
     cipher: auto
-    uuid: 8e8d5a10-7fd0-4818-8265-a4dc4a569d31
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id002
-    name: 🇬🇧_GB_英国_1
-    type: ss
-    server: 212.102.53.193
-    port: 443
-    password: shadowsocks
-    cipher: aes-128-gcm
-  - &id003
-    name: 🇺🇸_US_美国_2
-    type: ss
-    server: 35.87.39.181
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id004
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 43.130.39.36
-    port: 80
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    uuid: ce9aadc8-8c6e-4867-d247-9a84b469ac27
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -44,40 +33,40 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mg_cdn.yunjisuan.cf
-  - &id005
-    name: 🇧🇦_BA_波黑
+        host: a3.bcbot.in
+  - &id004
+    name: 🇺🇸_US_美国_2
     type: ss
-    server: 185.164.35.9
+    server: 54.188.25.27
+    port: 443
+    password: amazonskr05
+    cipher: aes-256-cfb
+  - &id005
+    name: 🇺🇸_US_美国_3
+    type: ss
+    server: 38.68.134.202
+    port: 5003
+    password: g5MeD6Ft3CWlJId
+    cipher: aes-256-gcm
+  - &id006
+    name: 🇫🇷_FR_法国_1
+    type: ss
+    server: 51.159.111.208
     port: 989
     password: f8f7aCzcPKbsF8p3
     cipher: aes-256-cfb
-  - &id006
-    name: 🇳🇿_NZ_新西兰
-    type: trojan
-    server: 216.73.156.230
-    port: 443
-    udp: true
-    password: 11e247e5-136d-45f1-844a-a7f054d36bab
-    sni: 216.73.156.230
-    skip-cert-verify: true
-    network: tcp
   - &id007
     name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 144.202.84.47
-    port: 57848
-    cipher: auto
-    uuid: e48643e7-0462-4055-f796-6ca6aa9f946d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
+    type: ss
+    server: 169.197.141.186
+    port: 801
+    password: tvX1v#NSFP_LG_bJ
+    cipher: chacha20-ietf-poly1305
   - &id008
     name: 🇺🇸_US_美国_5
     type: vmess
     server: whatismyipaddress.com
-    port: 2082
+    port: 2052
     cipher: auto
     uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
     alterId: 0
@@ -89,262 +78,17 @@ proxies:
       headers:
         host: mgtow_cdn.yunjisuan.cf
   - &id009
-    name: 🇩🇪_DE_德国_1
-    type: vmess
-    server: ee1-vmess.sshmax.xyz
-    port: 80
-    cipher: auto
-    uuid: ea85d824-2faa-4bb2-849b-a2965db4ce18
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: ee1-vmess.sshmax.xyz
-  - &id010
-    name: 🇸🇪_SE_瑞典_1
-    type: vmess
-    server: www.shopify.com
-    port: 2082
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: els_cdnone.yunjisuan.cf
-  - &id011
-    name: 🇮🇳_IN_印度_1
-    type: vmess
-    server: 103.113.68.233
-    port: 8880
-    cipher: auto
-    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: 103.113.68.233
-  - &id012
     name: 🇺🇸_US_美国_6
     type: vmess
-    server: 104.17.184.241
-    port: 80
+    server: 38.180.33.136
+    port: 50104
     cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: mg_cdn.yunjisuan.cf
-  - &id013
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: www.glassdoor.com
-    port: 2082
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: els_cdnone.yunjisuan.cf
-  - &id014
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 193.57.139.23
-    port: 80
-    cipher: auto
-    uuid: 507a7dd4-32e8-4071-a699-ace6a6f96487
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: internet.life.com.by
-  - &id015
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 185.22.154.12
-    port: 29715
-    cipher: auto
-    uuid: 8c6de0b1-7c20-45b2-e363-c55306db5022
+    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id016
-    name: 🇩🇪_DE_德国_2
-    type: vmess
-    server: 5.181.23.67
-    port: 80
-    cipher: auto
-    uuid: ea85d824-2faa-4bb2-849b-a2965db4ce18
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: ee1-vmess.sshmax.xyz
-  - &id017
-    name: 🇬🇧_GB_英国_2
-    type: vmess
-    server: uknws.mainssh.xyz
-    port: 80
-    cipher: auto
-    uuid: 66d048fb-3458-48e1-96ab-13e0c273c25e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    servername: uknws.mainssh.xyz
-    network: ws
-    ws-opts:
-      path: /vmess-nonetls
-  - &id018
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: www.udemy.com
-    port: 2082
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: els_cdnone.yunjisuan.cf
-  - &id019
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: 94.131.10.135
-    port: 8080
-    cipher: auto
-    uuid: e2021c91-6e29-49d6-9641-14a8f2600e05
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: 94.131.10.135
-  - &id020
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: ns1.v2-vip.fun
-    port: 80
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id021
-    name: 🇸🇪_SE_瑞典_2
-    type: ss
-    server: 45.8.147.80
-    port: 5741
-    password: Q5CEiebSuSl2qFkfE4ztG2
-    cipher: chacha20-ietf-poly1305
-  - &id022
-    name: 🇺🇸_US_美国_11
-    type: vmess
-    server: cf-lt.sharecentre.online
-    port: 80
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id023
-    name: 🇨🇳_CN_中国->🇬🇮_GI_直布罗陀
-    type: trojan
-    server: gbs.pptv-tv.store
-    port: 17728
-    udp: true
-    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
-    skip-cert-verify: true
-    network: tcp
-  - &id024
-    name: 🇺🇸_US_美国_12
-    type: vmess
-    server: lt2-vmess.sshmax.xyz
-    port: 80
-    cipher: auto
-    uuid: ea2928cb-f9cc-4747-ab60-d23abe3ba1e6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id025
-    name: 🇺🇸_US_美国_13
-    type: ss
-    server: 169.197.141.186
-    port: 801
-    password: tvX1v#NSFP_LG_bJ
-    cipher: chacha20-ietf-poly1305
-  - &id026
-    name: 🇯🇵_JP_日本
-    type: vmess
-    server: 47.245.2.84
-    port: 2082
-    cipher: auto
-    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: els_cdnone.yunjisuan.cf
-  - &id027
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
-    type: vmess
-    server: fr-01.jikuai.xyz
-    port: 2082
-    cipher: auto
-    uuid: 70666776-4e9f-4350-b3f0-afaff6a70db0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: fr-01.jikuai.xyz
-  - &id028
+  - &id010
     name: 🇯🇵_JP_日本->🇺🇸_US_美国
     type: vmess
     server: 47.91.28.15
@@ -359,59 +103,38 @@ proxies:
       path: /
       headers:
         host: mgtow_cdn.yunjisuan.cf
-  - &id029
-    name: 🇮🇪_IE_爱尔兰
-    type: trojan
-    server: 54.78.48.222
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-    alpn:
-      - http/1.1
-  - &id030
-    name: 🇫🇷_FR_法国
+  - &id011
+    name: 🇺🇸_US_美国_7
     type: ss
-    server: 51.158.150.173
-    port: 8119
-    password: cdBIDV42DCwnfIN
-    cipher: aes-256-gcm
-  - &id031
-    name: 🇺🇸_US_美国_14
+    server: 212.102.47.198
+    port: 443
+    password: shadowsocks
+    cipher: aes-128-cfb
+  - &id012
+    name: 🇦🇷_AR_阿根廷
+    type: ss
+    server: 190.103.176.29
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id013
+    name: 🇲🇽_MX_墨西哥
+    type: ss
+    server: 190.103.179.23
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id014
+    name: 🇫🇷_FR_法国_2
+    type: ss
+    server: 195.154.169.198
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id015
+    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
     type: vmess
-    server: 104.17.171.34
-    port: 80
-    cipher: auto
-    uuid: 60be5ddb-c9f1-48ec-b0ee-f6bd4364b3ce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: ccs.hostmjj.com
-  - &id032
-    name: 🇮🇳_IN_印度_2
-    type: vmess
-    server: ru1-vmess.sshmax.xyz
-    port: 80
-    cipher: auto
-    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: ru1-vmess.sshmax.xyz
-  - &id033
-    name: 🇺🇸_US_美国_15
-    type: vmess
-    server: www.visa.com.sg
+    server: skk.moe
     port: 8080
     cipher: auto
     uuid: 54d4d640-731c-4572-d0d4-e8a617816470
@@ -423,19 +146,258 @@ proxies:
       path: /
       headers:
         host: icu4.mac2win.top
-  - &id034
-    name: 🇮🇳_IN_印度_3
+  - &id016
+    name: 🇫🇷_FR_法国_3
+    type: ss
+    server: 145.239.6.202
+    port: 4444
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
+  - &id017
+    name: 🇺🇸_US_美国_8
     type: vmess
-    server: 103.113.68.233
+    server: cf-lt.sharecentre.online
     port: 80
     cipher: auto
-    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id018
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: els_trojanone.yunjisuan.cf
+    port: 14866
+    udp: true
+    password: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    sni: els_trojanone.yunjisuan.cf
+    skip-cert-verify: true
+    network: tcp
+  - &id019
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: lt2-vmess.sshmax.xyz
+    port: 80
+    cipher: auto
+    uuid: ea2928cb-f9cc-4747-ab60-d23abe3ba1e6
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /vmess
+  - &id020
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 104.17.184.241
+    port: 80
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mg_cdn.yunjisuan.cf
+  - &id021
+    name: 🇩🇪_DE_德国
+    type: vmess
+    server: 217.160.45.31
+    port: 8880
+    cipher: aes-128-gcm
+    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id022
+    name: 🇬🇧_GB_英国
+    type: ss
+    server: 77.72.5.150
+    port: 989
+    password: f8f7aCzcPKbsF8p3
+    cipher: aes-256-cfb
+  - &id023
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: www.udemy.com
+    port: 2082
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: els_cdnone.yunjisuan.cf
+  - &id024
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 172.67.136.23
+    port: 8880
+    cipher: auto
+    uuid: 79593a58-ed7e-4901-c3c7-8a993af4ab1c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: a8.bcbot.in
+  - &id025
+    name: 🇺🇸_US_美国->🇯🇵_JP_日本
+    type: vmess
+    server: cfcdn1.sanfencdn9.com
+    port: 2052
+    cipher: auto
+    uuid: 1eb5c2af-9211-461d-843b-de0de5de1d80
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/gp9z98zmv
+      headers:
+        host: us3k6jyp6cx4.nezfyiam.xyz
+  - &id026
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 94.131.14.177
+    port: 80
+    cipher: auto
+    uuid: ea2928cb-f9cc-4747-ab60-d23abe3ba1e6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /vmess
+  - &id027
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: cold-dawn-9246.fly.dev
+    port: 443
+    cipher: auto
+    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
+      headers:
+        host: cold-dawn-9246.fly.dev
+  - &id028
+    name: 🇮🇪_IE_爱尔兰
+    type: trojan
+    server: 52.210.135.125
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+    alpn:
+      - http/1.1
+  - &id029
+    name: 🇺🇸_US_美国_15
+    type: vmess
+    server: whatismyipaddress.com
+    port: 2082
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mgtow_cdn.yunjisuan.cf
+  - &id030
+    name: 🇸🇪_SE_瑞典
+    type: vmess
+    server: www.shopify.com
+    port: 2082
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: els_cdnone.yunjisuan.cf
+  - &id031
+    name: 🇺🇸_US_美国_16
+    type: vmess
+    server: www.glassdoor.com
+    port: 2082
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: els_cdnone.yunjisuan.cf
+  - &id032
+    name: 🇺🇸_US_美国_17
+    type: vmess
+    server: 132.145.132.227
+    port: 37121
+    cipher: auto
+    uuid: 93845b50-26f6-4203-f5ad-4d231d4e8f45
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id033
+    name: 🇫🇷_FR_法国_4
+    type: ss
+    server: 51.158.150.168
+    port: 4444
+    password: pKEW8JPByTVTLtM
+    cipher: aes-256-gcm
+  - &id034
+    name: 🇺🇸_US_美国_18
+    type: vmess
+    server: cover.mac2win.top
+    port: 8080
+    cipher: auto
+    uuid: 54d4d640-731c-4572-d0d4-e8a617816470
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: icu4.mac2win.top
+  - &id035
+    name: 🇺🇸_US_美国_19
+    type: ss
+    server: 38.54.108.222
+    port: 8119
+    password: cdBIDV42DCwnfIN
+    cipher: aes-256-gcm
 proxy-groups:
   - name: PROXY
     type: select
@@ -496,6 +458,7 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -535,6 +498,7 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
   - name: SELECT
     type: select
     proxies:
@@ -572,6 +536,7 @@ proxy-groups:
       - *id032
       - *id033
       - *id034
+      - *id035
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
