--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,65 +6,10 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇮🇳_IN_印度_1
-    type: vmess
-    server: 103.113.68.233
-    port: 80
-    cipher: auto
-    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id002
     name: 🇺🇸_US_美国_1
-    type: trojan
-    server: 167.68.5.183
-    port: 443
-    udp: true
-    password: d2698cf9-c47e-455c-8384-12e642cbba15
-    sni: 6us3.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us3
-  - &id003
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
     type: vmess
-    server: 2bbiozh7wbc.servecounterstrike.com
-    port: 2083
-    cipher: auto
-    uuid: 9e9b80f1-5555-4f7d-a209-d23b9d9dc047
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /snsk
-      headers:
-        host: PAneljadid.mookoMEilz.homes
-  - &id004
-    name: 🇺🇸_US_美国_2
-    type: vmess
-    server: cf-lt.sharecentre.online
-    port: 80
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id005
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: whatismyipaddress.com
-    port: 2052
+    server: www.udemy.com
+    port: 2082
     cipher: auto
     uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
     alterId: 0
@@ -74,9 +19,24 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: mgtow_cdn.yunjisuan.cf
-  - &id006
-    name: 🇺🇸_US_美国_4
+        host: els_cdnone.yunjisuan.cf
+  - &id002
+    name: 🇺🇸_US_美国_2
+    type: vmess
+    server: a3.bcbot.in
+    port: 8880
+    cipher: auto
+    uuid: ce9aadc8-8c6e-4867-d247-9a84b469ac27
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: a3.bcbot.in
+  - &id003
+    name: 🇺🇸_US_美国_3
     type: vmess
     server: 104.17.184.241
     port: 80
@@ -90,120 +50,11 @@ proxies:
       path: /
       headers:
         host: mg_cdn.yunjisuan.cf
-  - &id007
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_1
-    type: vmess
-    server: web.parspack.com
-    port: 80
-    cipher: auto
-    uuid: 5f797b91-c7ec-4178-d19e-9b069b70b446
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: zUlA9.eSmAIlkORea.sHop
-  - &id008
-    name: 🇺🇸_US_美国_5
-    type: trojan
-    server: 89.116.180.179
-    port: 443
-    udp: true
-    password: d2698cf9-c47e-455c-8384-12e642cbba15
-    sni: p6us4.pqjc.buzz
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /pq/us4
-  - &id009
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 38.180.33.136
-    port: 50104
-    cipher: auto
-    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: ns1.v2-vip.fun
-    port: 80
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id011
-    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗_2
-    type: vmess
-    server: 104.18.154.42
-    port: 80
-    cipher: auto
-    uuid: a2f27205-5b59-4a1d-e9ed-c78f7ab4b633
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: Quran14.eSmAIlkORea.sHop
-  - &id012
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 46.182.107.15
-    port: 30000
-    cipher: auto
-    uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-    alterId: 64
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /path/1702215223320
-  - &id013
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
-    type: vmess
-    server: 104.19.154.92
-    port: 2083
-    cipher: auto
-    uuid: 9e9b80f1-5555-4f7d-a209-d23b9d9dc047
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /snsk
-      headers:
-        host: PAneljadid.mookoMEilz.homes
-  - &id014
-    name: 🇩🇪_DE_德国
-    type: vmess
-    server: 217.160.45.31
-    port: 8880
-    cipher: auto
-    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id015
-    name: 🇺🇸_US_美国_8
+  - &id004
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: whatismyipaddress.com
-    port: 2082
+    port: 2052
     cipher: auto
     uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
     alterId: 0
@@ -214,8 +65,8 @@ proxies:
       path: /
       headers:
         host: mgtow_cdn.yunjisuan.cf
-  - &id016
-    name: 🇺🇸_US_美国_9
+  - &id005
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: 104.17.171.34
     port: 80
@@ -229,49 +80,200 @@ proxies:
       path: /
       headers:
         host: ccs.hostmjj.com
-  - &id017
-    name: 🇮🇳_IN_印度_2
+  - &id006
+    name: 🇺🇸_US_美国_6
     type: vmess
-    server: 103.113.68.233
-    port: 8880
+    server: web.parspack.com
+    port: 80
     cipher: auto
-    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: 103.113.68.233
-  - &id018
-    name: 🇨🇳_CN_中国
-    type: vmess
-    server: 159.75.178.50
-    port: 47551
-    cipher: auto
-    uuid: 2500a228-8c00-4934-81e0-22281c015a33
+    uuid: 5f797b91-c7ec-4178-d19e-9b069b70b446
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
       path: /
-  - &id019
-    name: 🇮🇳_IN_印度_3
+      headers:
+        host: zUlA9.eSmAIlkORea.sHop
+  - &id007
+    name: 🇺🇸_US_美国->🇯🇵_JP_日本
     type: vmess
-    server: ru1-vmess.sshmax.xyz
-    port: 80
+    server: cfcdn1.sanfencdn9.com
+    port: 2052
     cipher: auto
-    uuid: fddb3781-7e15-4731-a933-94db110b4bbc
+    uuid: 1eb5c2af-9211-461d-843b-de0de5de1d80
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /vmess
+      path: /video/gp9z98zmv
       headers:
-        host: ru1-vmess.sshmax.xyz
+        host: us3k6jyp6cx4.nezfyiam.xyz
+  - &id008
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    type: vmess
+    server: 104.19.154.92
+    port: 2083
+    cipher: auto
+    uuid: 9e9b80f1-5555-4f7d-a209-d23b9d9dc047
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /snsk
+      headers:
+        host: PAneljadid.mookoMEilz.homes
+  - &id009
+    name: 🇺🇸_US_美国->🇮🇷_IR_伊朗
+    type: vmess
+    server: 104.18.154.42
+    port: 80
+    cipher: auto
+    uuid: a2f27205-5b59-4a1d-e9ed-c78f7ab4b633
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: Quran14.eSmAIlkORea.sHop
+  - &id010
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 38.180.33.136
+    port: 50104
+    cipher: auto
+    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id011
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: ns1.v2-vip.fun
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id012
+    name: 🇩🇪_DE_德国
+    type: vmess
+    server: 217.160.45.31
+    port: 8880
+    cipher: aes-128-gcm
+    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id013
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: cover.mac2win.top
+    port: 8080
+    cipher: auto
+    uuid: 54d4d640-731c-4572-d0d4-e8a617816470
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: icu4.mac2win.top
+  - &id014
+    name: 🇯🇵_JP_日本->🇺🇸_US_美国
+    type: vmess
+    server: 47.91.28.15
+    port: 2052
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mgtow_cdn.yunjisuan.cf
+  - &id015
+    name: 🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: els_trojanone.yunjisuan.cf
+    port: 14866
+    udp: true
+    password: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    sni: els_trojanone.yunjisuan.cf
+    skip-cert-verify: true
+    network: tcp
+  - &id016
+    name: 🇮🇪_IE_爱尔兰
+    type: trojan
+    server: 52.210.135.125
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: false
+    network: tcp
+  - &id017
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: cf-lt.sharecentre.online
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id018
+    name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+    type: vmess
+    server: skk.moe
+    port: 8080
+    cipher: auto
+    uuid: 54d4d640-731c-4572-d0d4-e8a617816470
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: icu4.mac2win.top
+  - &id019
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+    type: vmess
+    server: 2bbiozh7wbc.servecounterstrike.com
+    port: 2083
+    cipher: auto
+    uuid: 9e9b80f1-5555-4f7d-a209-d23b9d9dc047
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /snsk
+      headers:
+        host: PAneljadid.mookoMEilz.homes
 proxy-groups:
   - name: PROXY
     type: select
